<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_help_open"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffaa99"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/MAIN_TENTRUONG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tentruong"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_help_open"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/MAIN_IMG_SLIDE"
            android:layout_width="match_parent"
            android:layout_height="172dp"
            android:src="@drawable/my_image" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/BTN_INFO_TS"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/bgedittext_press"
                        android:text="@string/infotuyensinh" />

                    <Button
                        android:id="@+id/BTN_FIND_PLACE"
                        android:layout_width="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/bgedittext_press"
                        android:text="@string/timnhatro" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/BTN_WEB_UNIVER"
                        android:layout_width="match_parent"
                         android:layout_marginTop="10dp"
                        android:layout_height="0dp"
                        android:background="@drawable/bgedittext_press"
                        android:layout_weight="1"
                        android:text="@string/webtruong" />

                    <Button
                        android:id="@+id/BTN_CALL_SUPPORT"
                        android:layout_width="match_parent"
                         android:layout_marginTop="10dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/bgedittext_press"
                        android:text="@string/callsp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="bottom|center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/Term_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/term"
                    android:textSize="10sp"
                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>